add func to work only methods marked with @Benchmark annotation